# Project_course_6

./: .env.sample  README.md  catalog_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: index.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py
catalog/templates/catalog/: contacts.html  index.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/html/: contacts.html  home.html  index.html  product_details.html  products_list.html
catalog/templates/html/includes/: inc_menu.html
config/: settings.py  urls.py
